@@ -4,6 +4,7 @@ Identify function.
 Return original image.
 """
 
+
 def identity(image, **kwargs):
     """Identity function.
 
@@ -21,8 +22,8 @@ def identity(image, **kwargs):
 
     Notes
     -----
-    This function is useful for automated plotting of images processed with 
+    This function is useful for automated plotting of images processed with
     different filters and comparison to the original.
     """
-    
+
     return image
